Now returning the report data on a successful upload, and fixed an issue with overflowing text

--- a/src/scss/components/FolderPicker.scss
+++ b/src/scss/components/FolderPicker.scss
@@ -15,6 +15,10 @@
         flex-grow: 1;
         flex-shrink: 1;
     }
+
+    .folder-picker-label {
+        max-width: 180px;
+    }
 }
 
 .folder-picker-button {
